@@ -1,2 +1,3 @@
 DIST Rivet-2.1.1.tar.bz2 4084261 SHA256 eefa936de6f6c34a6bab39899841f3189d7621c8ba227032f0f32e6e20dfcf85 SHA512 ee1ed8741b539aa773ba7ef9b704bfe0cc5aa1683ad2f4eac5cffc798ac989f041383e38852afb0353a59bdf887bb24c1491407ad4a5f68700c481b5e8008ebf WHIRLPOOL 1ee7cd016cc6ab3a843edc1655dce4bfc251e96bffdc157bda653204e99e997f6f23427af654bb8914314b82103502674fd89637c2acf72529bf7976fb707aaf
 DIST Rivet-2.1.2.tar.bz2 4101565 SHA256 40a20c1ee186326e5bfd906e0bc88f16dc740551be9cc274e9a826873d9c1eed SHA512 d3f8078c7131c173f64c97466ac7e8b2fd559a2c5ae5c8366ba2735fa71aab3a490b9d0a7af614be4f858698f9fa56bca50043f690227ab62128583964e1107d WHIRLPOOL 16a51d102b7834ec29e9088d4183135daa4e7237a31d0df7e0f4b7b7e46090df235363850a776946e700266e024d100864c83b3a94285266c7ba7b584bd78b7a
+DIST Rivet-2.3.0.tar.bz2 2742948 SHA256 dd07702981d586e4b97b0fa56ae08cd08a631a952322a9b52e7622a46a7741ab SHA512 b51b77f80d69156dead899312cad838bc03479a072e163df50262e86790503515f8ab8af93723c3cbd33007d9812aa10581b2c960d92bc1fcf5031d27018d239 WHIRLPOOL ce9e5dd34ba9b53de192aee39bcd94565a62a328bd35dcb1ef810cc7b129e9ae6529fc8f970889f7a6970567bdd0f040d15fc5bbb83ec22e38daccb34cbb4fdf
